--- a/group_vars/all/apt.yml
+++ b/group_vars/all/apt.yml
@@ -1,9 +1,9 @@
 ---
 ## Deploy Apt source custom template
-apt_update_source_list         : "template"  
+apt_update_source_list         : "template"
 
 ## use netherland mirror
-apt_update_source_list_mirror  : "http://nl.archive.ubuntu.com/ubuntu/" 
+apt_update_source_list_mirror  : "http://us.archive.ubuntu.com/ubuntu/"
 
 ## Install unattended package
 unattended_install             : True
